--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,15 @@
   "require": {
     "cubex/framework": "^3.0.0-beta.1",
     "packaged/dispatch": "^2.0.0-beta.1",
-    "packaged/glimpse": "^2.2",
-    "packaged/form": "2.4.0",
-    "packaged/dal": "^1.7"
+    "packaged/glimpse": "^2.5",
+    "packaged/form": "^2.4",
+    "packaged/dal": "^1.8",
+    "packaged-ui/fontawesome": "^3.4",
+    "packaged-ui/fusion": "dev-master"
   },
   "require-dev": {
-    "php-coveralls/php-coveralls": "2.1.0",
-    "phpunit/phpunit": "6.5.5",
+    "php-coveralls/php-coveralls": "^2.1",
+    "phpunit/phpunit": "^6.5",
     "filp/whoops": "^2.3"
   },
   "autoload": {
@@ -39,6 +41,10 @@
     {
       "type": "vcs",
       "url": "git@github.com:packaged/glimpse.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:packaged-ui/fusion.git"
     }
   ]
 }
