fix example config, read env connections ini

--- a/conf/defaults/connections.ini
+++ b/conf/defaults/connections.ini
@@ -1,4 +1,4 @@
 [quantum_sql]
-construct_class = \Packaged\Dal\Ql\MysqliConnection
+construct_class = \Packaged\Dal\Ql\MySQLiConnection
 host = 127.0.0.1
 database = quantum
