--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
     }
   ],
   "require": {
-    "cubex/framework": "^3.0",
-    "packaged/dispatch": "^2.1",
-    "packaged/glimpse": "^2.5",
+    "ext-json": "*",
+    "cubex/framework": "^3.1",
+    "packaged/dispatch": "^2.3",
+    "packaged/glimpse": "^2.6",
     "packaged/form": "^2.4",
     "packaged/dal": "^1.8",
     "packaged-ui/fontawesome": "^3.5",
-    "packaged-ui/fusion": "^0.5"
+    "packaged-ui/fusion": "^0.6"
   },
   "require-dev": {
     "php-coveralls/php-coveralls": "^2.1",
@@ -35,18 +36,6 @@
     }
   },
   "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:cubex/framework.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@github.com:packaged/dispatch.git"
-    },
-    {
-      "type": "vcs",
-      "url": "git@github.com:packaged/glimpse.git"
-    },
     {
       "type": "vcs",
       "url": "git@github.com:packaged-ui/fusion.git"
