--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "ext-json": "*",
-    "cubex/framework": "^3.1",
+    "cubex/framework": "^4.0",
     "packaged/dispatch": "^2.3",
     "packaged/glimpse": "^2.6",
     "packaged/form": "^2.4",
@@ -38,11 +38,19 @@
   "repositories": [
     {
       "type": "vcs",
+      "url": "git@github.com:cubex/framework.git"
+    },
+    {
+      "type": "vcs",
       "url": "git@github.com:packaged-ui/fusion.git"
     },
     {
       "type": "vcs",
       "url": "git@github.com:packaged/dispatch.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:packaged/dal.git"
     }
   ]
 }
