--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "author": "Tom Kay <oridan82@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@packaged-ui/ckwidgets": "^0.0.4",
+    "@packaged-ui/ckwidgets": "^0.0.7",
+    "@packaged-ui/filer": "^0.0.3",
+    "css-loader": "^2.1.1",
     "grunt": "^1.0",
     "grunt-contrib-clean": "^2.0",
-    "grunt-contrib-copy": "^1.0"
+    "grunt-contrib-copy": "^1.0",
+    "style-loader": "^0.23.1"
+  },
+  "scripts": {
+    "build": "webpack --mode=production"
   }
 }
