--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ckeditor/ckeditor5-upload": "^11.0.1",
     "@ckeditor/ckeditor5-utils": "^12.1.0",
     "@ckeditor/ckeditor5-widget": "^11.0.1",
-    "@packaged-ui/ckeditor5-editor-iframe": "^0.0.1",
+    "@packaged-ui/ckeditor5-editor-iframe": "^0.0.2",
     "@packaged-ui/ckeditor5-filer": "^0.0.1",
     "@packaged-ui/ckeditor5-layout": "^0.0.1",
     "@packaged-ui/filer": "^0.0.5",
@@ -36,6 +36,7 @@
     "grunt": "^1.0",
     "grunt-contrib-clean": "^2.0",
     "grunt-contrib-copy": "^1.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
     "style-loader": "^0.23.1",
