--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@ckeditor/ckeditor5-utils": "^12.1.0",
     "@ckeditor/ckeditor5-widget": "^11.0.1",
     "@packaged-ui/ckeditor5-editor-iframe": "^0.0.2",
-    "@packaged-ui/ckeditor5-filer": "^0.0.1",
+    "@packaged-ui/ckeditor5-filer": "^0.0.2",
     "@packaged-ui/ckeditor5-layout": "^0.0.1",
     "@packaged-ui/filer": "^0.0.5",
+    "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
     "grunt": "^1.0",
     "grunt-contrib-clean": "^2.0",
     "grunt-contrib-copy": "^1.0",
@@ -42,8 +44,9 @@
     "raw-loader": "^2.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-file-extract-plugin": "^0.0.2"
   },
   "scripts": {
     "build": "webpack --mode=production"
