--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-file-extract-plugin": "^0.0.4"
+    "webpack-cli": "^3.3.2"
   },
   "scripts": {
     "build": "webpack --mode=production"
