utf8 mysql connection

--- a/conf/defaults/connections.ini
+++ b/conf/defaults/connections.ini
@@ -2,3 +2,7 @@
 construct_class = \Packaged\Dal\Ql\MySQLiConnection
 host = 127.0.0.1
 database = quantum
+options[3] = "SET NAMES utf8mb4"
+; connect timeout = 1 second
+options[0] = 1
+charset = utf8mb4
