--- a/src/Base/Components/CkEditor/package.json
+++ b/src/Base/Components/CkEditor/package.json
@@ -1,10 +1,44 @@
 {
-  "name": "ckeditor-component",
+  "name": "quantum-ckeditor",
   "version": "1.0.0",
-  "files": [
-    "package.json"
-  ],
-  "dependencies": {
-    "@packaged-ui/ckwidgets": "^1.0"
+  "author": "Tom Kay <oridan82@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^11.1.3",
+    "@ckeditor/ckeditor5-autoformat": "^11.0.4",
+    "@ckeditor/ckeditor5-basic-styles": "^11.1.3",
+    "@ckeditor/ckeditor5-block-quote": "^11.1.2",
+    "@ckeditor/ckeditor5-core": "^12.2.1",
+    "@ckeditor/ckeditor5-dev-utils": "^12.0.3",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.3",
+    "@ckeditor/ckeditor5-editor-inline": "^12.2.1",
+    "@ckeditor/ckeditor5-essentials": "^11.0.4",
+    "@ckeditor/ckeditor5-heading": "^11.0.4",
+    "@ckeditor/ckeditor5-image": "^13.1.2",
+    "@ckeditor/ckeditor5-link": "^11.1.1",
+    "@ckeditor/ckeditor5-list": "^12.0.4",
+    "@ckeditor/ckeditor5-media-embed": "^11.1.3",
+    "@ckeditor/ckeditor5-paragraph": "^11.0.4",
+    "@ckeditor/ckeditor5-paste-from-office": "^11.0.4",
+    "@ckeditor/ckeditor5-table": "^13.0.2",
+    "@ckeditor/ckeditor5-theme-lark": "^14.1.1",
+    "@ckeditor/ckeditor5-ui": "^13.0.2",
+    "@ckeditor/ckeditor5-upload": "^11.1.1",
+    "@ckeditor/ckeditor5-utils": "^13.0.1",
+    "@ckeditor/ckeditor5-widget": "^11.0.4",
+    "@packaged-ui/ckeditor5-editor-iframe": "^0.0.4",
+    "@packaged-ui/ckeditor5-filer": "^0.0.7",
+    "@packaged-ui/ckeditor5-layout": "^0.0.8",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
+    "terser-webpack-plugin": "^1.4.1",
+    "webpack": "^4",
+    "webpack-cli": "^3"
+  },
+  "scripts": {
+    "build": "webpack --mode=production"
   }
 }
